# codi

./: .codi.json  .env.example  .gitignore  AGENTS.md  ANALYSIS-MARKETING-DOCS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  CODI.md  CONTRIBUTING.md  LICENSE  MARKETING.md  MODULARIZATION_SUMMARY.md  NOTES.md  PLAN-remove-ollama-cloud-provider.md  README.md  REPORT.md  ROADMAP.md  SECURITY.md  TEST_COMMIT.md  WORKFLOW-TESTING.md  codi-models.yaml  ollama-cloud.code-review  openai.code-review  package-lock.json  package.json  pnpm-lock.yaml  test-command-registration.js  test-commit-format.ts  test-debug-events.js  test-model-switching.js  test-pick-image.js  test-workflow-build.js  test-workflow-debug.js  test-workflow-directly.js  test-workflow-registration.js  tsconfig.json  typedoc.json  vitest.config.ts  (+1 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md  demo.tape
codi-rs/: Cargo.toml  README.md
codi-rs/benches/: tui.rs
codi-rs/docs/: MIGRATION_PLAN.md  PRODUCTION_READINESS_PLAN.md  ROADMAP.md  TELEMETRY.md
codi-rs/src/: completion.rs  lib.rs  main.rs  types.rs
codi-rs/src/agent/: mod.rs  types.rs
codi-rs/src/config/: loader.rs
codi-rs/src/model_map/: executor.rs  registry.rs
codi-rs/src/orchestrate/: child_agent.rs  commander.rs  griptree.rs  mod.rs  types.rs  worktree.rs
codi-rs/src/orchestrate/ipc/: client.rs  error.rs  mod.rs  protocol.rs  server.rs  transport.rs
codi-rs/src/providers/: anthropic.rs  mod.rs  openai.rs
codi-rs/src/rag/: chunker.rs  retriever.rs  vector_store.rs
codi-rs/src/rag/embeddings/: openai.rs
codi-rs/src/session/: context.rs  mod.rs  service.rs  storage.rs
codi-rs/src/symbol_index/: database.rs  indexer.rs  service.rs
codi-rs/src/telemetry/: init.rs  spans.rs
codi-rs/src/tools/: mod.rs  registry.rs
codi-rs/src/tools/handlers/: bash.rs  edit_file.rs  glob.rs  grep.rs  list_dir.rs  manage_rag.rs  mod.rs  rag_search.rs  read_file.rs  write_file.rs
codi-rs/src/tui/: app.rs  commands.rs  diff.rs  events.rs  mod.rs  search.rs  terminal_ui.rs  ui.rs
codi-rs/src/tui/components/: diff_view.rs  exec_cell.rs  mod.rs  process_footer.rs  search_bar.rs
codi-rs/src/tui/input/: enhanced.rs  mod.rs
codi-rs/src/tui/streaming/: collector.rs
codi-rs/src/tui/syntax/: highlighter.rs
codi-rs/tests/: exec_cell_unit.rs  tui_exec_cell.rs
codi-rs/tests/snapshots/: tui_exec_cell__exec_cell_error.snap  tui_exec_cell__exec_cell_expanded.snap  tui_exec_cell__exec_cell_live_output.snap  tui_exec_cell__exec_cell_live_output.snap.new  tui_exec_cell__exec_cell_pending.snap  tui_exec_cell__exec_cell_pending.snap.new  tui_exec_cell__exec_cell_running.snap  tui_exec_cell__exec_cell_running.snap.new  tui_exec_cell__exec_cell_success.snap
docs/: COMPLETION-REPORT.md  DEBUG-BRIDGE-PHASE-4-5.md  DEBUG-BRIDGE-PLAN.md  DESIGN-multi-agent-orchestration.md  EMBEDDING_CONFIG.md  EVOLUTION-INTEGRATION.md  GITHUB-ISSUES-PRIORITY.md  PASTE-ENHANCEMENT-PLAN.md  PLAN-model-map-embeddings.md  PLAN-multi-agent-orchestration.md  PLAN-opencode-features.md  PLAN-performance-optimization.md  PLAN-security-model-validation.md  PLAN-test-interface-mocking.md  PLUGIN-INVESTIGATION.md  PRODUCTION-READINESS.md  REFACTORING-PLAN.md  RESEARCH-prior-art-multi-agent.md  ROADMAP.md  SKILLS-SYSTEM-IMPLEMENTATION-GUIDE.md  TEST-COVERAGE-PLAN.md  TODO-multi-agent-orchestration.md  TOOL-REFERENCE.md  case-study-reader-agents.md  command-parsing-bug.md  file-picker-implementation.md  fix-ipc-handshake-race-condition.md  index.html  mock-agent-needs.md  mock-provider-responses.md  plan-mock-agent-remaining-20.md  review-pr-spec.md  tools.md  web-search-api-keys.md  workflow-interactive-enhanced.md
evolution/: #01-interactive-workflow-system.md  #02-enhanced-web-search.md  #03-lsp-integration.md  README.md  (+2 more)
(+417 files in other folders)
