[package]
name = "codi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Your AI coding wingman - a hybrid assistant supporting Claude, OpenAI, and local models"
license = "AGPL-3.0-or-later"
authors = ["Layne Penney"]
repository = "https://github.com/laynepenney/codi"
homepage = "https://github.com/laynepenney/codi"
readme = "README.md"
keywords = ["ai", "coding", "assistant", "claude", "openai", "llm", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "codi"
path = "src/main.rs"

[lib]
name = "codi"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"

# Terminal UI (for later phases)
# ratatui = "0.29"
# crossterm = "0.28"
# rustyline = "14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
