[package]
name = "codi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Your AI coding wingman - a hybrid assistant supporting Claude, OpenAI, and local models"
license = "AGPL-3.0-or-later"
authors = ["Layne Penney"]
repository = "https://github.com/laynepenney/codi"
homepage = "https://github.com/laynepenney/codi"
readme = "README.md"
keywords = ["ai", "coding", "assistant", "claude", "openai", "llm", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "codi"
path = "src/main.rs"

[lib]
name = "codi"
path = "src/lib.rs"

[features]
default = ["telemetry"]

# Enable telemetry (tracing spans, metrics collection)
# Disable with --no-default-features for minimal overhead
telemetry = []

# Release builds: strip debug/trace logs at compile time (near-zero cost)
# Use: cargo build --release --features release-logs
release-logs = ["tracing/release_max_level_info"]

# Maximum performance: disable all tracing at compile time
# Use: cargo build --release --features max-perf
max-perf = ["tracing/max_level_off"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"

# Terminal UI (for later phases)
# ratatui = "0.29"
# crossterm = "0.28"
# rustyline = "14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
dirs = "5"

# File operations (Phase 1: Tools)
globset = "0.4"
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "tools"
harness = false

[[bench]]
name = "config"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
